main.css
@font-face {
  font-family: roboto;
    src: url(fonts/Roboto-Thin.ttf);
}

body {
  background-color: rgb(61, 61, 61);
  user-select: none;
}

#codex p, span {
  font-family: roboto;
}


#codex {
  width: 1200px;
  height: 720px;
  background-color: rgb(85, 85, 85);
  position: absolute;
  left: 50%;
  top: 100px;
  margin-left: -600px;
  box-shadow: inset 0 0 16px 16px rgb(24, 24, 24), 0 0 8px 8px rgb(43, 43, 43);
}

#contentScroller {
  width: 270px;
  height: 700px;
  background-color: rgb(133, 23, 23);
  position: absolute;
  right: 0px;
  top: 10px;
  box-shadow: inset 0 0 16px 16px rgb(68, 7, 7), 0 0 8px 8px rgb(92, 22, 22);
}

#contentScroller >p:first-child {
  margin-top: 55px;
}

#contentSearchbar {
  width: 265px;
  height: 45px;
  background-color: rgb(92, 22, 22);
  position: absolute;
  right: 5px;
  top: 10px;
  box-shadow: inset 0 0 16px 16px rgb(68, 7, 7);
}

#contentSearchbutton, #contentSearchtagtoggle {
  transition: 0.1s;
  width: 40px;
  height: 40px;
  background-color: grey;
  text-align: center;
  border-radius: 4px;
  box-shadow: inset 0 0 10px 5px rgb(70, 69, 69), 0 0 2px 2px black;
  cursor: pointer;
  position: absolute;
  right: 40px;
  top: 2.5px;
}

#contentSearchbutton {
  right: 40px;
}

#contentSearchtagtoggle {
  right: 0px;
}


#contentSearchfield {
  height: 35px;
  width: 175px;
  font-size: 30px;
  box-shadow: inset 0 0 10px 5px rgb(70, 69, 69), 0 0 2px 2px black;
  border-radius: 8px;
  background-color: grey;
  position: absolute;
  left: 0px;
  top: 2.5px;
  color: silver;
  text-shadow: 0 0 6px black;
}


#content {
  width: 910px;
  height: 700px;
  position: absolute;
  left: 0px;
  top: 5px;
  border: 5px solid black;
}

.CodexCategories, .CodexArrows, .CodexArrowsSmall, .CodexSubcategories, .CodexEntities {
  color: silver;
  text-shadow: 0 0 10px black;
  margin: 5px;
}

.CodexCategories {
  font-size: 28px;
  text-decoration: underline;
  font-weight: bold;
}

.CodexArrows {
  font-size: 26px;
  text-decoration: none !important;
  position: absolute;
  user-select: none !important;
}

.CodexArrowsSmall {
  font-size: 20px;
  text-decoration: none !important;
  position: absolute;
  user-select: none !important;
}

.CodexSubcategories {
  font-size: 22px;
  text-decoration: underline;
}

.CodexEntities {
  font-size: 20px;
  position: relative;
  cursor: pointer;
  width: max-content;
}

.PointerClass {
  cursor: pointer;
  /*text-shadow: -0.05em 0.05em 0.1em black;*/
  text-decoration: underline;
}

.CodexEntryTitle {
  font-size: 56px;
  color: rgb(211, 211, 211);
  text-shadow: 0 0 16px black;
  text-decoration: underline;
  position: absolute;
  left: 50%;
  top: -40px;
  transform: translateX(-50%);
}

.TextIconClass {
  width: 30px;
  height: 30px;
}

#CodexBaseText {
  position: absolute;
  left: 10px;
  top: 80px;
}

#CodexBaseText p, span {
  user-select: all !important;
  font-size: 30px;
  color: silver;
  text-shadow: 0 0 8px black;
}

#allyportraits {
  width: 300px;
  height: 700px;
  position: absolute;
  left: 50%;
  top: 75px;
  margin-left: -950px;
}

#enemyportraits {
  width: 300px;
  height: 700px;
  position: absolute;
  left: 50%;
  top: 75px;
  margin-left: 610px;
}

.portrait_background {
  width: 300px;
  height: 210px;
  background-color: rgb(66, 66, 66);
  box-shadow: 0 0 15px 12px rgb(31, 31, 31);
  position: relative;
  background-image: url(resources/images/portraits/portrait_background.png);
  background-repeat: no-repeat;
  background-size: cover;
  margin: 25px;
  border-radius: 8px;
}

.portrait_title {
  font-size: 24px;
  color: gold;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  top: -18px;
  text-shadow: -2px 2px 2px black;
  white-space: nowrap;
  text-decoration: underline;
}

.portrait_image {
  border-radius: 12px;
  box-shadow: 0 0 12px 8px black;
  position: absolute;
  left: 20px;
  bottom: 20px;
  width: 110px;
  height: 130px;
}

.portrait_class {
  height: 50px;
  width: 50px;
  border-radius: 100%;
  position: absolute;
  left: 50%;
  bottom: 30px;
  margin-left: -25px;
}


.hpbarbg, .mpbarbg {
  width: 128px;
  height: 23px;
  border: 2px solid black;
  position: absolute;
  background-color: rgb(44, 44, 44);
  box-shadow: inset 0 0 6px 4px rgb(36, 36, 36), 0 0 4px 4px black;
  left: 153px;
}

.barNum {
  color: white;
  font-size: 20px;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  top: -20px;
  z-index: 1;
  white-space: nowrap;
}

.hpbarfill, .mpbarfill {
  left: 155px;
  height: 23px;
  position: absolute;
}

.hpbarbg {
  top: 60px;
}

.mpbarbg {
  top: 102px;
}

.hpbarfill {
  top: 62px;
  background-color: rgb(134, 6, 6);
  box-shadow: inset 0 0 6px 4px rgb(80, 3, 3);
}

.mpbarfill {
  top: 104px;
  background-color: rgb(6, 36, 134);
  box-shadow: inset 0 0 6px 4px rgb(3, 8, 80);
}

.statusEffects {
  width: 128px;
  height: 48px;
  background-color: rgb(34, 33, 33);
  position: absolute;
  right: 17px;
  bottom: 16px;
  border: 2px solid black;
  box-shadow: inset 0 0 6px 4px rgb(36, 36, 36), 0 0 4px 4px black;
}

#uiIcons {
  width: fit-content;
  height: 100px;
  position: absolute;
  right: 50px;
  bottom: 50px;
  user-select: none;
}

.ui_button {
  transition: 0.25s;
  margin-left: 5px;
  margin-right: 5px;
  padding: 10px;
  cursor: pointer;
}

.ui_button:hover {
  transform: scale(1.05)
}

#settings {
  width: 300px;
  height: fit-content;
  position: absolute;
  left: 50%;
  margin-left: -150px;
  top: 100px;
}

#settings button {
  transition: 0.15s;
  width: 300px;
  height: 80px;
  box-shadow: 0 12px 4px 4px rgb(70, 8, 20);
  border: none;
  background-color: rgb(255, 20, 67);
  user-select: none;
  outline: none;
  font-size: 48px;
  font-family: roboto;
  color: white;
  text-shadow: 0 4px 6px black;
  position: absolute;
  cursor: pointer;
}

#save {
  top: 0px;
}

#load {
  top: 110px;
}

#options {
  top: 220px;
}

#menu {
  top: 330px;
}
/* ... */

